# kmitlnetauth

./: .dockerignore  .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Directory.Build.props  Directory.Packages.props  Dockerfile  GEMINI.md  KmitlNetAuth.slnx  LICENSE  README.md  bacon.toml
.github/: dependabot.yml
.github/workflows/: build.yml
crates/core/: Cargo.toml
crates/core/src/: client.rs  config.rs  credentials.rs  error.rs  lib.rs
crates/service/: Cargo.toml  kmitlnetauth.service
crates/service/debian/: postinst  prerm
crates/service/src/: main.rs
crates/service/src/tui/: app.rs  mod.rs  ui.rs
crates/tray/: Cargo.toml
crates/tray/src/: main.rs
crates/tray/wix/: main.wxs
docs/: INSTALL-PACKAGES.md  INSTALL.md
packaging/debian/: postinst  prerm
packaging/systemd/: kmitlnetauth.service
packaging/wix/: License.rtf  Package.wxs
scripts/: kmitl-login.sh
src/KmitlNetAuth.Cli/: AuthWorker.cs  KmitlNetAuth.Cli.csproj  Program.cs  SetupWizard.cs  packages.lock.json
src/KmitlNetAuth.Cli/Commands/: ConfigCommand.cs  RunCommand.cs  SetupCommand.cs  StatusCommand.cs
src/KmitlNetAuth.Core/: AuthClient.cs  AuthResult.cs  Config.cs  ConfigPaths.cs  KmitlNetAuth.Core.csproj  packages.lock.json
src/KmitlNetAuth.Core/DependencyInjection/: CoreServiceCollectionExtensions.cs
src/KmitlNetAuth.Core/Exceptions/: AuthFailedException.cs  ConfigException.cs  KmitlNetAuthException.cs
src/KmitlNetAuth.Core/Platform/: CredentialJsonContext.cs  DhcpDetector.cs  IAutoStartManager.cs  ICredentialStore.cs  INetworkInfo.cs  INotificationService.cs  NetworkInfo.cs
src/KmitlNetAuth.Core/Platform/Linux/: FileCredentialStore.cs  LinuxAutoStartManager.cs  LinuxNotificationService.cs
src/KmitlNetAuth.Core/Platform/Windows/: DpapiCredentialStore.cs  WindowsAutoStartManager.cs  WindowsNotificationService.cs
src/KmitlNetAuth.Core/Services/: AuthService.cs  IAuthService.cs
src/KmitlNetAuth.Tray/: App.xaml  App.xaml.cs  AuthWorker.cs  CrashHandler.cs  KmitlNetAuth.Tray.csproj  LogBufferSink.cs  MainWindow.xaml  MainWindow.xaml.cs  NativeConsole.cs  Program.cs  SettingsForm.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  SetupWindow.xaml  SetupWindow.xaml.cs  TrayApplicationContext.cs  UpdateChecker.cs  UpdateWindow.xaml  UpdateWindow.xaml.cs  packages.lock.json
src/KmitlNetAuth.Tray/Pages/: AboutPage.xaml  AboutPage.xaml.cs  DashboardPage.xaml  DashboardPage.xaml.cs  DebugPage.xaml  DebugPage.xaml.cs  LogPage.xaml  LogPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs
src/KmitlNetAuth.Tray/Pages/Setup/: ConfirmPage.xaml  ConfirmPage.xaml.cs  CredentialsPage.xaml  CredentialsPage.xaml.cs  WelcomePage.xaml  WelcomePage.xaml.cs
test/KmitlNetAuth.Cli.Tests/: CliTests.cs  ConfigRoundTripTests.cs  KmitlNetAuth.Cli.Tests.csproj  packages.lock.json
test/KmitlNetAuth.Core.Tests/: AuthClientTests.cs  AuthServiceTests.cs  ConfigPathsTests.cs  ConfigTests.cs  DhcpDetectorTests.cs  FileCredentialStoreTests.cs  KmitlNetAuth.Core.Tests.csproj  NetworkInfoTests.cs  packages.lock.json
