[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/service",
    "crates/tray",
]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls", "cookies"] }
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
directories = "5.0"
keyring = "3"
notify-rust = "4"
auto-launch = "0.5"
open = "5.0"
