[package]
name = "kmitlnetauth-core"
version = "0.1.0"
edition = "2024"

[dependencies]

anyhow = { workspace = true }

serde = { workspace = true }

serde_json = "1.0"

serde_yaml = { workspace = true }

reqwest = { workspace = true }

tokio = { workspace = true }

tracing = { workspace = true }

thiserror = "1.0"

mac_address = "1.1"

log = "0.4"

directories = { workspace = true }

keyring = { workspace = true }

notify-rust = { workspace = true }
