[package]
name = "kmitlnetauth-service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kmitlnetauth"
path = "src/main.rs"

[dependencies]
kmitlnetauth-core = { path = "../core" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
tracing-appender = { workspace = true }
serde_yaml = { workspace = true }
dialoguer = "0.11"


[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[target.'cfg(unix)'.dependencies]

daemonize = "0.5"

signal-hook = "0.3"



[package.metadata.deb]

name = "kmitlnetauth"

maintainer = "Nonthaphan Inthawong <67015067@kmitl.ac.th>"

copyright = "2026, Nonthaphan Inthawong "

license-file = ["../../LICENSE", "0"]

depends = "$auto"

section = "utility"

priority = "optional"

assets = [

    ["../../target/release/kmitlnetauth", "usr/bin/", "755"],

    ["kmitlnetauth.service", "etc/systemd/system/", "644"]

]

maintainer-scripts = "debian/"



[package.metadata.generate-rpm]

assets = [

    { source = "../../target/release/kmitlnetauth", dest = "/usr/bin/kmitlnetauth", mode = "755" },

    { source = "kmitlnetauth.service", dest = "/etc/systemd/system/kmitlnetauth.service", mode = "644" }

]
