[package]
name = "kmitlnetauth-tray"
version = "0.1.0"
edition = "2024"

[dependencies]
kmitlnetauth-core = { path = "../core" }
anyhow = { workspace = true }
serde = { workspace = true }
directories = { workspace = true }
tray-icon = "0.19"
tao = "0.30"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
log = "0.4"
notify-rust = { workspace = true }
crossbeam-channel = "0.5"
auto-launch = { workspace = true }
open = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18" 

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Console", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
